# ttml-validator

./: .coverage  .coverage.license  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  SECURITY.md  data.json  eslint.config.js  package-lock.json  package.json  pyproject.toml  pyscript.toml  webpack.config.js
.github/: build_docs.yml  dco.yml  dependabot.yml
.github/workflows/: build_docs.yml  ci.yml  coverage.yml
LICENSES/: BSD-3-Clause.txt  LicenseRef-W3C-20230101.txt
docs/: .coverage  Makefile  build_docs.py  conf.py  dependencies.rst  development.rst  index.rst  internals.rst  make.bat  preParseChecks.rst  testing.rst  usage.rst  validationLogging.rst  versions.yaml  xmlChecks.rst
docs/_templates/: versions.html
docs/_templates/autosummary/: module.rst
docs/source/: conf.py  dependencies.rst  index.rst  internals.rst  preParseChecks.rst  testing.rst  usage.rst  validationLogging.rst  xmlChecks.rst
docs/source/modules/: modules.rst  src.constraintSets.rst  src.preParseChecks.rst  src.registries.rst  src.rst  src.schemas.rst  src.validationLogging.rst  src.xmlChecks.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_styleAttribs_py.html  z_145eef247bfb46b6_timeExpression_py.html  z_145eef247bfb46b6_ttmlValidator_py.html  z_145eef247bfb46b6_xmlUtils_py.html  z_36f028580bb02cc8_test_actorRefsCheck_py.html  z_36f028580bb02cc8_test_bbcTimingCheck_py.html  z_36f028580bb02cc8_test_bodyXmlCheck_py.html  z_36f028580bb02cc8_test_daptLangCheck_py.html  z_36f028580bb02cc8_test_daptTimingCheck_py.html  z_36f028580bb02cc8_test_dapt_py.html  z_36f028580bb02cc8_test_daptmDescTypeCheck_py.html  z_36f028580bb02cc8_test_daptmRepresents_py.html  z_36f028580bb02cc8_test_headXmlCheck_py.html  z_36f028580bb02cc8_test_inlineStyleAttributeCheck_py.html  z_36f028580bb02cc8_test_preParseCheck_py.html  z_36f028580bb02cc8_test_pruner_py.html  z_36f028580bb02cc8_test_regionRefsCheck_py.html  z_36f028580bb02cc8_test_styleAttribs_py.html  z_36f028580bb02cc8_test_styleRefsCheck_py.html  z_36f028580bb02cc8_test_time_expressions_py.html  z_36f028580bb02cc8_test_ttXmlCheck_py.html  z_36f028580bb02cc8_test_ttmRoleCheck_py.html  z_36f028580bb02cc8_test_validation_py.html  z_36f028580bb02cc8_test_xmlCheck_py.html  z_36f028580bb02cc8_test_xmlIdCheck_py.html  z_36f028580bb02cc8_test_xmlStructureCheck_py.html  z_36f028580bb02cc8_test_xmlUtils_py.html  z_690efaca841a65fc_contentDescriptorRegistry_py.html  z_690efaca841a65fc_daptmDescTypeRegistry_py.html  z_690efaca841a65fc_jsonLoader_py.html  z_690efaca841a65fc_ttmRoleRegistry_py.html  z_96252e0bd46061f1_preParseCheck_py.html  z_96252e0bd46061f1_xmlStructureCheck_py.html  z_b76e5c5262e9a6f2_validationCodes_py.html  z_b76e5c5262e9a6f2_validationLogger_py.html  z_b76e5c5262e9a6f2_validationResult_py.html  (+33 more)
src/: ebuttdSchema.py  pageScript.py  preParseCheck.py  styleAttribs.py  timeExpression.py  ttmlValidator.py  validationCollater.py  validationResult.py  xmlCheck.py  xmlUtils.py
src/constraintSets/: bbcConstraints.py  constraintSet.py  daptConstraints.py
src/html/: index.html
src/js/: main.js
src/preParseChecks/: preParseCheck.py  xmlStructureCheck.py
src/registries/: __init__.py  contentDescriptorRegistry.py  daptmDescTypeRegistry.py  jsonLoader.py  role.json  ttmRoleRegistry.py
src/schemas/: daptSchema.py  ebuttdSchema.py
src/schemas/xsd/dapt/ebu-tt-m-xsd/: README.md  ebu-tt-m-datatypes.xsd  ebu-tt-metadata.xsd
src/schemas/xsd/ebu-tt-d/: README.markdown  ebutt_d.xsd  ebutt_datatypes.xsd  ebutt_styling.xsd  imsc1-parameters.xsd  imsc1-styling.xsd  parameter.xsd  styling.xsd  xml.xsd
src/schemas/xsd/ebu-tt-d/ebu-tt-m-xsd/: ebu-tt-m-datatypes.xsd  ebu-tt-metadata.xsd  metadata.xsd
src/validationLogging/: validationCodes.py  validationLogger.py  validationResult.py  validationSummariser.py
src/xmlChecks/: actorRefsCheck.py  bbcTimingXmlCheck.py  bodyXmlCheck.py  copyrightCheck.py  daptLangCheck.py  daptTimingXmlCheck.py  daptUtils.py  daptmDescTypeCheck.py  daptmRepresentsCheck.py  divXmlCheck.py  headXmlCheck.py  inlineStyleAttributeCheck.py  layoutCheck.py  pXmlCheck.py  pruner.py  regionRefsCheck.py  spanXmlCheck.py  styleRefsCheck.py  stylingCheck.py  textCheck.py  timingAttributeCheck.py  timingXmlCheck.py  ttXmlCheck.py  ttmlRoleCheck.py  ttmlUtils.py  xmlCheck.py  xmlIdCheck.py  xsdValidator.py
test/: test_actorRefsCheck.py  test_bbcTimingCheck.py  test_bodyXmlCheck.py  test_dapt.py  test_daptLangCheck.py  test_daptTimingCheck.py  test_daptmDescTypeCheck.py  test_daptmRepresents.py  test_headXmlCheck.py  test_inlineStyleAttributeCheck.py  test_preParseCheck.py  test_pruner.py  test_regionRefsCheck.py  test_styleAttribs.py  test_styleRefsCheck.py  test_time_expressions.py  test_timingCheck.py  test_ttXmlCheck.py  test_ttmRoleCheck.py  test_validation.py  test_xmlCheck.py  test_xmlIdCheck.py  test_xmlStructureCheck.py  test_xmlUtils.py
