# SPDX-FileCopyrightText: Copyright © 2026 BBC
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "ttml-validator"
version = "0.1.0"
description = "Utility for validating TTML-like files against the BBC Subtitle Guidelines EBU-TT-D requirements."
authors = [ {name = "Nigel Megitt <nigel.megitt@bbc.co.uk>"} ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "xmlschema == 4.3.1",
    "charset-normalizer == 3.4.4"
]

[project.scripts]
validate-ttml = "src.ttmlValidator:main"
collate-validation-results = "src.validationCollater:main"

[tool.poetry]
packages = [
    { include = "src" },
    { include = "test" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage==7.13.3",
    "debugpy==1.8.20",
    "sphinx==9.0.4",
    "pydocstyle==6.3.0",
    "sphinx-rtd-theme==3.1.0",
    "pyyaml==6.0.3",
    "ruff==0.15.2",
    "reuse==6.2.0",
    "ty==0.0.17",
]

[tool.ty.terminal]
output-format = "github"

[tool.ty.rules]
invalid-argument-type = "warn"